<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.GoalFragment">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.GoalActivity">
        
        <TextView
            android:id="@+id/goalTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/julius_sans_one"
            android:text="@string/goal_title"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="42sp"
            
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    
        <TextView
            android:id="@+id/goalGoalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/goal_current_goal"
            android:textAlignment="center"
            android:textColor="@android:color/tertiary_text_light"
            
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            
            app:layout_constraintTop_toBottomOf="@id/goalTextTitle" />
    
        <TextView
            android:id="@+id/goalTextGoalNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/julius_sans_one"
            android:text="@string/main_goal_start_amount"
            android:textAlignment="center"
            android:textAllCaps="true"

            android:textSize="60sp"
            app:layout_constraintEnd_toStartOf="@id/goalTextUnit"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/goalGoalText" />
    
        <TextView
            android:id="@+id/goalTextUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/main_unit_ml"
            android:textAlignment="center"

            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/goalTextGoalNumber"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/goalTextGoalNumber"
        />
    
        <TextView
            android:id="@+id/goalTextEnterWeightText2"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/goal_enter_weight_text"
            android:textAlignment="center"

            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            
            app:layout_constraintTop_toBottomOf="@id/goalTextGoalNumber" />
        
        <EditText
            android:id="@+id/goalWeightInput"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:importantForAutofill="no"
            android:hint="@string/goal_random_weight"
            
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goalTextEnterWeightText2" />
        
        <TextView
            android:id="@+id/goalTextWeightUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/goal_weight"
            android:textAlignment="center"
            
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/goalWeightInput"
            app:layout_constraintStart_toEndOf="@+id/goalWeightInput"
            
            app:layout_constraintTop_toTopOf="@+id/goalWeightInput" />
    
        <Button
            android:id="@+id/goalCalculate"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            
            android:fontFamily="@font/montserrat"
            android:text="@string/goal_calculate"
            android:textSize="18sp"
            
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goalWeightInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>