<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/corners_rounded_shade"
    android:elevation="2dp">

    <ImageView
        android:id="@+id/drinks_list_item_image"
        android:layout_width="56dp"
        android:layout_height="56sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"

        android:layout_marginBottom="16dp"
        android:contentDescription="@string/drink_list_image"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/water01" />

    <TextView
        android:id="@+id/drinks_list_item_volume"
        style="@style/Headline2"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/basic_amount"
        app:layout_constraintBottom_toTopOf="@+id/drinks_list_item_time"
        app:layout_constraintStart_toEndOf="@+id/drinks_list_item_image"
        app:layout_constraintTop_toTopOf="@+id/drinks_list_item_image"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/drinks_list_item_unit"
        style="@style/Headline2"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/main_unit_ml"
        app:layout_constraintBottom_toBottomOf="@+id/drinks_list_item_volume"
        app:layout_constraintStart_toEndOf="@+id/drinks_list_item_volume"
        app:layout_constraintTop_toTopOf="@+id/drinks_list_item_volume" />

    <ImageButton
        android:id="@+id/drinks_list_item_delete_button"
        style="@style/BaseIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"

        android:contentDescription="@string/drink_list_delete_button"

        android:src="@drawable/ic_drinks_list_item_delete_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/drinks_list_item_edit_button"
        style="@style/BaseIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"

        android:contentDescription="@string/drink_list_edit_button"
        android:src="@drawable/ic_drinks_list_item_edit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/drinks_list_item_time"
        style="@style/Headline4"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/drinks_list_item_time"
        app:layout_constraintBottom_toBottomOf="@+id/drinks_list_item_image"
        app:layout_constraintStart_toStartOf="@id/drinks_list_item_volume" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.48021108" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.52242744" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.23218997" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.27176782" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.73350924" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7757256" />

</androidx.constraintlayout.widget.ConstraintLayout>