<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.GoalActivity">

    <EditText
            android:id="@+id/goalInput"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.441"
            android:textSize="24sp"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat"
            android:autofillHints="@string/main_goal_start_amount"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/goalTextEnterWeightText"
            />

    <TextView
            android:id="@+id/mainTextUnit8"
            android:text="@string/main_unit"
            android:fontFamily="@font/montserrat"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/goalInput"
            app:layout_constraintTop_toTopOf="@+id/goalInput"
            app:layout_constraintStart_toEndOf="@+id/goalInput"
            android:layout_marginStart="4dp"
            android:hint="@string/main_goal_start_amount"/>

    <TextView
            android:id="@+id/goalTextEnterWeightText"
            android:text="@string/goal_enter_goal"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/goalCalculate"/>

    <TextView
            android:id="@+id/goalTextEnterWeightText2"
            android:text="@string/goal_enter_weight_text"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/goalText"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"/>

    <Button
            android:id="@+id/goalButtonSetGoal"
            android:text="@string/main_button_set_goal"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:onClick="setGoal"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/goalInput"/>

    <Button
            android:id="@+id/goalCalculate"
            android:text="@string/goal_calculate"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:onClick="calculateGoal"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/goalWeightInput"/>

    <EditText
            android:id="@+id/goalWeightInput"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.441"
            android:textSize="24sp"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat"
            android:autofillHints="@string/main_goal_start_amount"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/goalTextEnterWeightText2"/>

    <TextView
            android:id="@+id/mainTextWeightUnit"
            android:text="@string/goal_weight"
            android:fontFamily="@font/montserrat"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/goalWeightInput"
            app:layout_constraintTop_toTopOf="@+id/goalWeightInput"
            app:layout_constraintStart_toEndOf="@+id/goalWeightInput"
            android:layout_marginStart="8dp"
            android:hint="@string/main_goal_start_amount"/>

    <TextView
            android:id="@+id/goalText"
            android:text="@string/goal_text"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/goalTextTitle"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

    <TextView
            android:id="@+id/goalTextTitle"
            android:text="@string/goal_title"
            android:fontFamily="@font/julius_sans_one"
            android:textSize="42sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:textAllCaps="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>