<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <ImageView
        android:id="@+id/drinks_list_item_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/drink_list_image"
        app:layout_constraintBottom_toBottomOf="parent"
        
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/water01" />
    
    <TextView
        android:id="@+id/drinks_list_item_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/basic_amount"
    
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/drinks_list_item_time"
        app:layout_constraintStart_toEndOf="@+id/drinks_list_item_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
    
    <TextView
        android:id="@+id/drinks_list_item_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/main_unit"
        
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/drinks_list_item_volume"
        app:layout_constraintStart_toEndOf="@+id/drinks_list_item_volume"
        
        app:layout_constraintTop_toTopOf="@+id/drinks_list_item_volume" />
    
    <ImageButton
        android:id="@+id/drinks_list_item_delete_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/drink_list_delete_button"
        android:scaleType="fitXY"
        android:tint="#FA6A75"
        
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/drinks_list_item_unit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        
        app:srcCompat="@android:drawable/ic_menu_delete" />
    
    <TextView
        android:id="@+id/drinks_list_item_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    
        android:fontFamily="@font/montserrat"
    
        android:text="@string/drinks_list_item_time"
        app:layout_constraintBottom_toBottomOf="@+id/drinks_list_item_image"
        app:layout_constraintStart_toStartOf="@id/drinks_list_item_volume" />

</androidx.constraintlayout.widget.ConstraintLayout>