<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"

>
    
    <ImageView
        android:id="@+id/popup_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/custom_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/water01" />
    
    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_keyboard_arrow_left"
        android:id="@+id/popup_arrow_left"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toStartOf="@+id/popup_image"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@+id/popup_image"
        app:layout_constraintBottom_toBottomOf="@+id/popup_image"
        android:contentDescription="@string/custom_left"
    />
    
    
    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_keyboard_arrow_right"
        android:id="@+id/popup_arrow_right"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@+id/popup_image"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/popup_image"
        app:layout_constraintBottom_toBottomOf="@+id/popup_image"
        android:contentDescription="@string/custom_right"
    />
    
    <EditText
        android:id="@+id/popup_volume_input"
        android:inputType="number"
        android:text="@string/glass_250"
        android:fontFamily="@font/montserrat"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/popup_image"
        app:layout_constraintEnd_toEndOf="@+id/popup_image"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/popup_image"
        app:layout_constraintHorizontal_bias="0.4"
        android:layout_marginBottom="16dp"
        android:importantForAutofill="no"/>
    
    <TextView
        android:id="@+id/popup_unit"
        android:text="@string/main_unit"
        android:fontFamily="@font/montserrat"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/popup_volume_input"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/popup_volume_input"
        app:layout_constraintBottom_toBottomOf="@+id/popup_volume_input"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>